# langchain-sql-slack-agent

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
fake-db-gen/: README.md  pyproject.toml
fake-db-gen/data/people/: people.csv
fake-db-gen/data/schema/: campaigns.csv  campaigns.md  customer_feedback.csv  customer_feedback.md  customers.csv  customers.md  employee.csv  employee.md  event_tracking.csv  event_tracking.md  expenses.csv  expenses.md  interactions.csv  interactions.md  marketing_automation.csv  marketing_automation.md  product_catalog.csv  product_catalog.md  sales_data.csv  sales_data.md  trips.csv  trips.md
fake-db-gen/data/table/: campaigns.csv  customer_feedback.csv  customers.csv  employee.csv  employees.csv  event_tracking.csv  expenses.csv  interactions.csv  marketing_automation.csv  product_catalog.csv  sales_data.csv  trips.csv
fake-db-gen/fake-db-gen/: bq_scripts.py  db_client.py  db_server.py  embed.py  embed_milvus.py  embed_oai.py  encoding.py  fake_slack_conversation.py  hello_milvus.py  main.py  rerank.py  schema_org.py  utils.py
langchain-app-server/: .gitignore  README.md  langchain-docker-compose.yml  milvus-docker-compose.yml  pyproject.toml
langchain-app-server/app/: embed.py  server.py  view_embed.py
langchain-app-server/app/chains/: chat.py  rag_qa.py
langchain-app-server/examples/: conversational_rag.py  simple_rag.py
slack-bot-server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
slack-bot-server/src/: app.py
