[tool.poetry]
name = "fake-db-gen"
version = "0.1.0"
description = ""
authors = ["Eduardo Dadalto <edadaltocg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
faker = "^25.0.1"
fire = "^0.6.0"
pandas = "^2.2.2"
mdpd = "^0.2.1"
transformers = "^4.40.2"
sentence-transformers = "^2.7.0"
pymilvus = "2.4.1"
protobuf = "3.20.2"
milvus = "^2.3.8"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
